--- a/main.yml
+++ b/main.yml
@@ -8,6 +8,7 @@ catalog:
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend_paths:
   - /hybrid/catalog
+  capture_path_additions: true
 
 chrome:
   channel: '#flip-mode-squad'
@@ -17,12 +18,14 @@ compliance:
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend_paths:
   - /rhel/compliance
+  capture_path_additions: true
 
 cost-management:
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
   frontend_paths:
   - /hybrid/settings/cost-management-sources
   - /hybrid/cost-management
+  capture_path_additions: true
 
 dashboard:
   channel: '#flip-mode-squad'
@@ -31,7 +34,6 @@ dashboard:
   - /rhel/dashboard
   - /rhel
   
-
 drift:
   deployment_repo: https://github.com/RedHatInsights/drift-frontend-build
   frontend_paths:
@@ -41,6 +43,7 @@ hooks:
   deployment_repo: https://github.com/RedHatInsights/notifications-frontend-build.git
   frontend_paths:
   - /insights/settings/hooks
+  capture_path_additions: true
 
 insights:
   channel: '#advisor'
@@ -52,6 +55,7 @@ insights:
   - /insights/remediations
   - /insights/settings/hooks
   - /insights/settings/sources
+  capture_path_additions: true
 
 inventory:
   channel: '#flip-mode-squad'
@@ -59,6 +63,7 @@ inventory:
   frontend_paths:
   - /rhel/inventory
   - /insights/inventory
+  capture_path_additions: true
 
 landing:
   channel: '#flip-mode-squad'
@@ -68,6 +73,7 @@ openshift:
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
   frontend_paths:
   - /openshift
+  capture_path_additions: true
 
 rbac:
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
@@ -80,6 +86,7 @@ remediations:
   frontend_paths:
   - /rhel/remediations
   - /insights/remediations
+  capture_path_additions: true
 
 sources:
   channel: '#insights_topology_svc'
@@ -102,4 +109,4 @@ vulnerability:
   deployment_repo: https://github.com/RedHatInsights/vulnerability-ui-build
   frontend_paths:
   - /rhel/vulnerability
-
+  capture_path_additions: true
