--- a/main.yml
+++ b/main.yml
@@ -1,66 +1,52 @@
-actions:
-  title: Overview
-  default: true
-
 approval:
   title: Approval
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend_paths:
-  - /hybrid/catalog/approval
+    - /hybrid/catalog/approval
   reload: catalog/approval
-
-aws:
-  title: Cloud Details
 
 catalog:
   title: Catalog
   channel: '#insights-svc-portal'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend_paths:
-  - /hybrid/catalog
+    - /hybrid/catalog
   sub_apps:
-  - portfolios
-  - platforms
-  - orders
-  - approval
-
-catalog-sources:
-  title: Catalog Sources
-  reload: settings/sources
+    - portfolios:
+      title: Portfolios
+      default: true
+    - platforms:
+      title: Platforms
+    - orders:
+      title: Orders
+    - approval
 
 chrome:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
 
-clusters:
-  title: Clusters
-  default: true
-
 compliance:
   title: Compliance
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend_paths:
-  - /rhel/compliance
+    - /rhel/compliance
 
 cost-management:
   title: Cost Management
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
   frontend_paths:
-  - /hybrid/settings/cost-management-sources
-  - /hybrid/cost-management
+    - /hybrid/settings/cost-management-sources
+    - /hybrid/cost-management
   sub_apps:
-  - cost-management-overview
-  - ocp-on-aws
-  - ocp
-  - aws
-
-cost-management-sources:
-  title: Cost Management Sources
-  reload: cost-management/sources
-
-cost-management-overview:
-  title: Overview
-  default: true
+    - '':
+      title: Overview
+      default: true
+    - ocp-on-aws:
+      title: OpenShift on cloud details
+    - ocp:
+      title: OpenShift details
+    - aws:
+      title: Cloud details
 
 dashboard:
   title: Dashboard
@@ -68,42 +54,45 @@ dashboard:
   deployment_repo: https://github.com/RedHatInsights/insights-dashboard-build
   default: true
   frontend_paths:
-  - /rhel
-  - /rhel/dashboard
+    - /rhel
+    - /rhel/dashboard
   
 drift:
   title: System Comparison
   deployment_repo: https://github.com/RedHatInsights/drift-frontend-build
   frontend_paths:
-  - /rhel/drift
+    - /rhel/drift
 
 hooks:
   title: Hooks
   deployment_repo: https://github.com/RedHatInsights/notifications-frontend-build.git
   frontend_paths:
-  - /insights/settings/hooks
+    - /insights/settings/hooks
   reload: settings/hooks
 
 hybrid:
   title: Hybrid Cloud Management Services
   sub_apps:
-  - catalog
-  - cost-management
-  - settings-hybrid
+    - catalog
+    - cost-management
+    - settings-hybrid
   top_level: true
 
 insights:
   title: Red Hat Insights
   channel: '#advisor'
   sub_apps:
-  - actions
-  - rules
-  - inventory
-  - remediations
-  - settings-insights
+    - actions:
+      title: Overview
+      default: true
+    - rules:
+      title: Rules
+    - inventory
+    - remediations
+    - settings-insights
   deployment_repo: https://github.com/RedHatInsights/insights-advisor-frontend-build
   frontend_paths:
-  - /insights
+    - /insights
   top_level: true
 
 inventory:
@@ -111,42 +100,28 @@ inventory:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-inventory-frontend-build
   frontend_paths:
-  - /rhel/inventory
-  - /insights/inventory
+    - /rhel/inventory
+    - /insights/inventory
 
 landing:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
 
-ocp:
-  title: OpenShift details
-
-ocp-on-aws:
-  title: OpenShift on cloud details
-
 openshift:
   title: Red Hat OpenShift Cluster Manager
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
   frontend_paths:
-  - /openshift
+    - /openshift
   sub_apps:
-  - clusters
-
-orders:
-  title: Orders
-
-platforms:
-  title: Platforms
-
-portfolios:
-  title: Portfolios
-  default: true
+    - clusters:
+      title: Clusters
+      default: true
 
 rbac:
   title: User Access Management
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
   frontend_paths:
-  - /hybrid/settings/rbac
+    - /hybrid/settings/rbac
   reload: settings/rbac
 
 remediations:
@@ -154,51 +129,53 @@ remediations:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-remediations-frontend-build
   frontend_paths:
-  - /rhel/remediations
-  - /insights/remediations
+    - /rhel/remediations
+    - /insights/remediations
 
 rhel:
   title: Cloud Management Services
   sub_apps:
-  - dashboard
-  - vulnerability
-  - compliance
-  - drift
-  - inventory
-  - remediations
-
-rules:
-  title: Rules
+    - dashboard:
+      default: true
+    - vulnerability
+    - compliance
+    - drift
+    - inventory
+    - remediations
 
 settings-hybrid:
   title: Settings
   sub_apps:
-  - catalog-sources
-  - cost-management-sources
-  - rbac
+    - catalog-sources:
+      title: Catalog Sources
+      reload: settings/sources
+    - cost-management-sources:
+      title: Cost Management Sources
+      reload: cost-management/sources
+    - rbac
 
 settings-insights:
   title: Settings
   disabled_on_stable: true
   sub_apps:
-  - hooks
-  - sources
+    - hooks
+    - sources
 
 sources:
   title: Sources
   channel: '#insights_topology_svc'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend_paths:
-  - /insights/settings/sources
-  - /hybrid/settings/sources
-  - /hybrid/sources
+    - /insights/settings/sources
+    - /hybrid/settings/sources
+    - /hybrid/sources
   reload: settings/sources
 
 storybook:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-frontend-storybook-build
   frontend_paths:
-  - /docs/storybook
+    - /docs/storybook
 
 tower-analytics:
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
@@ -207,4 +184,4 @@ vulnerability:
   title: Vulnerability
   deployment_repo: https://github.com/RedHatInsights/vulnerability-ui-build
   frontend_paths:
-  - /rhel/vulnerability
+    - /rhel/vulnerability
