--- a/main.yml
+++ b/main.yml
@@ -147,7 +147,7 @@
   top_level: true
 
 - id: settings-hybrid
-  id_override: settings
+  suppress_id: true
   title: Settings
   sub_apps:
     - id: catalog-sources
@@ -159,7 +159,7 @@
     - id: rbac
 
 - id: settings-insights
-  id_override: settings
+  suppress_id: true
   title: Settings
   disabled_on_stable: true
   sub_apps:
