add mailing list

--- a/main.yml
+++ b/main.yml
@@ -288,4 +288,5 @@ migration-analytics:
     paths:
       - /migration-analytics
   git_repo: https://github.com/project-xavier/xavier-ui
+  mailing_list: migration-analytics-devel@redhat.com
   top_level: true
